clusters/main/apps/attic/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: attic
  labels:
    pod-security.kubernetes.io/enforce: privileged
