clusters/main/apps/attic/service-tailscale.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: attic-tailscale
  namespace: attic
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "attic-ci"
    tailscale.com/tags: "tag:attic"
spec:
  type: ClusterIP
  selector:
    app: attic
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
