clusters/main/apps/attic/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: attic
  namespace: attic
spec:
  type: ClusterIP
  selector:
    app: attic
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
