clusters/main/apps/attic/ingress-ci.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attic-ci
  namespace: attic
  annotations:
    tailscale.com/tags: "tag:attic"
    tailscale.com/proxy-class: "attic-ci"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: attic
      port:
        number: 8080
  tls:
    - hosts:
        - attic-ci
