clusters/main/apps/attic/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attic
  namespace: attic
  annotations:
    tailscale.com/funnel: "true"
    tailscale.com/proxy-class: attic
    tailscale.com/tags: "tag:attic"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: attic
      port:
        number: 8080
  tls:
    - hosts:
        - attic
